--- a/QJY.WEB/ViewV5/AppPage/XZGL/XZGLLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/XZGL/XZGLLIST.html
@@ -177,11 +177,11 @@
                                     <td>{{YLTel}}</td>
                                 </tr>
                                 <tr>
-                                    <td class="output-key">合计</td>
+                                    <td class="output-key">实发合计</td>
                                     <td>{{YLHJ}}</td>
                                 </tr>
                                 <tr>
-                                    <td class="output-key" colspan="2">应发：{{ylhj(YFData)}}</td>
+                                    <td class="output-key" colspan="2">应发合计：{{ylhj(YFData)}}</td>
                                 </tr>
                                 <tr ms-repeat="YFData">
                                     <td class="output-key">
@@ -192,7 +192,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td class="output-key" colspan="2">应扣：{{ylhj(YKData)}}</td>
+                                    <td class="output-key" colspan="2">应扣合计：{{ylhj(YKData)}}</td>
                                 </tr>
                                 <tr ms-repeat="YKData">
                                     <td class="output-key">
