--- a/QJY.WEB/ViewV5/AppPage/XZGL/XZGLVIEW.html
+++ b/QJY.WEB/ViewV5/AppPage/XZGL/XZGLVIEW.html
@@ -74,10 +74,10 @@
                                 </tr>
                                 <tr>
                                     <td class="output-key">合计</td>
-                                    <td>{{ctData.合计}}</td>
+                                    <td>{{ctData.实发合计}}</td>
                                 </tr>
                                 <tr>
-                                    <td class="output-key" colspan="2">应发：{{ylhj(ctData.YF)}}</td>
+                                    <td class="output-key" colspan="2">应发合计：{{ylhj(ctData.YF)}}</td>
                                 </tr>
                                 <tr ms-repeat="ctData.YF">
                                     <td class="output-key">
@@ -88,7 +88,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td class="output-key" colspan="2">应扣：{{ylhj(ctData.YK)}}</td>
+                                    <td class="output-key" colspan="2">应扣合计：{{ylhj(ctData.YK)}}</td>
                                 </tr>
                                 <tr ms-repeat="ctData.YK">
                                     <td class="output-key">
