--- a/QJY.WEB/View_Mobile/UI/CRM/index.html
+++ b/QJY.WEB/View_Mobile/UI/CRM/index.html
@@ -125,6 +125,7 @@
 
     </div>
 </div>
+    <script src="/View_Mobile/JS/layer/layer.m.js"></script>
     <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
     <script src="/View_Mobile/JS/avalon1.47.js"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20171225"></script>
@@ -134,7 +135,7 @@
             userData: {},
             TongJiData: { KHQTY: 0, KHQTY2: 0, KHQTY3: 0 },
             GetGongJI: function () {
-                $.getJSON("/API/VIEWAPI.ashx?Action=CRM_GETCOUNT", function (r) {
+                $.getJSON("/API/VIEWAPI.ashx?Action=CRM_GETCOUNT",{}, function (r) {
                     if (r.ErrorMsg == "") {
                         model.TongJiData.KHQTY = r.Result;
                         model.TongJiData.KHQTY2 = r.Result1;
@@ -161,7 +162,7 @@
         })
 
         avalon.ready(function () {
-            $.getJSON("/API/VIEWAPI.ashx?Action=XTGL_GETUSERINFO", function (r) {
+            $.getJSON("/API/VIEWAPI.ashx?Action=XTGL_GETUSERINFO",{}, function (r) {
                 if (r.ErrorMsg == "") {
                     model.userData = r.Result;
                 }
