--- a/QJY.WEB/ViewV5/AppPage/XZGL/FFJLLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/XZGL/FFJLLIST.html
@@ -28,7 +28,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ms-repeat-el="ListData" ms-on-mouseover="mouseover" ms-on-mouseout="mouseout">
+                <tr ms-repeat-el="ListData" >
                     <td class="tc">
                         {{$index+1}}
                     </td>
