--- a/QJY.WEB/ViewV5/Base/UserSelect.html
+++ b/QJY.WEB/ViewV5/Base/UserSelect.html
@@ -59,7 +59,7 @@
         .isel {
             top: 0;
             right: 0;
-            color: darkgoldenrod;
+            color: #12b8f6;
             font-size: 16px;
         }
 
@@ -114,7 +114,7 @@
         .panel-body .badge {
             position: absolute;
             top: -5px;
-            right: -6px;
+            right: -16px;
             background-color: red;
             padding-left: 5px;
             padding-right: 5px;
@@ -124,7 +124,7 @@
         .panel-body .usersel {
             position: absolute;
             top: -5px;
-            right: -6px;
+            right: -16px;
             padding-left: 5px;
             padding-right: 5px;
         }
