完善图书借阅模块逻辑

--- a/QJY.WEB/ViewV5/AppPage/JYGL/JYGL.html
+++ b/QJY.WEB/ViewV5/AppPage/JYGL/JYGL.html
@@ -10,11 +10,11 @@
                     <div class="add-ic">
                         <div style="display:block;">
                             <div class="add-ic fl-left" style="width: 45%;">
-                                <input type="text" class="form-control szhl_form_date_time szhl_require" ms-class-1="null:modelData.ID" ms-duplex="modelData.StartTime">
+                                <input type="text" class="form-control szhl_form_date szhl_require" ms-class-1="null:modelData.ID" ms-duplex="modelData.StartTime">
                             </div>
                             <div class="add-ic" style="float: left; line-height: 30px; width: 10%; text-align: center;">：</div>
                             <div class="add-ic fl-right" style="width: 45%;">
-                                <input type="text" class="form-control szhl_form_date_time szhl_require" ms-class-1="null:modelData.ID" ms-duplex="modelData.EndTime">
+                                <input type="text" class="form-control szhl_form_date szhl_require" ms-class-1="null:modelData.ID" ms-duplex="modelData.EndTime">
                             </div>
                         </div>
                     </div>
