--- a/QJY.WEB/ViewV5/AppPage/JYGL/JYGLLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/JYGL/JYGLLIST.html
@@ -47,8 +47,8 @@
                     </td>
                     <td>{{el.JYRName}}</td>
                     <td>{{el.TSName}}</td>
-                    <td>{{el.StartTime|date('yyyy-MM-dd HH:ss')}}</td>
-                    <td>{{el.EndTime|date('yyyy-MM-dd HH:ss')}}</td>
+                    <td>{{el.StartTime|date('yyyy-MM-dd')}}</td>
+                    <td>{{el.EndTime|date('yyyy-MM-dd')}}</td>
                     <td>{{el.StateName}} </td>
 
                     <td>
