--- a/QJY.WEB/ViewV5/AppPage/JYGL/TSGL.html
+++ b/QJY.WEB/ViewV5/AppPage/JYGL/TSGL.html
@@ -20,13 +20,13 @@
                 <li class="add-item add-width fl-left">
                     <label class="add-item-label"><i>*</i>名称</label>
                     <div class="add-ic">
-                        <input id="conNR" ms-duplex="modelData.TSName" class="form-control szhl_require" maxlength="400" />
+                        <input id="conNR" ms-duplex="modelData.TSName" class="form-control szhl_require " maxlength="400" />
                     </div>
                 </li>
                 <li class="add-item add-width fl-right">
-                    <label class="add-item-label">购买日期</label>
+                    <label class="add-item-label">购买年月</label>
                     <div class="add-ic">
-                        <input type="text" ms-duplex="modelData.BuyDate" class="form-control" maxlength="50" />
+                        <input type="text" ms-duplex="modelData.BuyDate" class="form-control szhl_form_date_mon" maxlength="50" />
                     </div>
                 </li>
                 <li class="add-item add-width fl-left">
