--- a/QJY.WEB/ViewV5/AppPage/JYGL/TSGLVIEW.html
+++ b/QJY.WEB/ViewV5/AppPage/JYGL/TSGLVIEW.html
@@ -25,7 +25,7 @@
                 [{ ColName: "TSNum", ColText: "图书编码", IsSel: true },
                       { ColName: "TypeName", ColText: "图书类型", IsSel: true, },
                       { ColName: "TSName", ColText: "图书名称", IsSel: true, },
-                      { ColName: "BuyDate", ColText: "购买时间", IsSel: true, },
+                      { ColName: "BuyDate", ColText: "购买年月", IsSel: true, },
                       { ColName: "Price", ColText: "购买价格(元)", IsSel: true },
                       { ColName: "authe", ColText: "作者", IsSel: true, },
                       { ColName: "cbs", ColText: "出版社", IsSel: true, },
