--- a/QJY.WEB/ViewV5/AppPage/APP_ADD_WF.html
+++ b/QJY.WEB/ViewV5/AppPage/APP_ADD_WF.html
@@ -312,7 +312,7 @@
             </tr>
             <tr class="trss" ms-if="(!DataID||isHasDataQX=='Y')&&!iscansp">
                 <!--只有没有数据（添加页面）和拥有数据编辑权限时才显示此选项-->
-                <td class="text-center">
+                <td class="text-center" style="    PADDING-RIGHT: 40PX;">
                     <div class="input-group" style="height: 40px">
                         <span class="input-group-addon " ms-if="lctype=='0'">审核人</span>
                         <select class="form-control " style="height: 40px;" id="conshr" ms-if="lctype=='0'">
