--- a/QJY.WEB/View_Mobile/UI/UI_XXFB_INDEXNEW.html
+++ b/QJY.WEB/View_Mobile/UI/UI_XXFB_INDEXNEW.html
@@ -150,6 +150,14 @@
             </div>
 
         </div>
+        <div class="right-panel">
+            <ul>
+                <li>
+                    <a class="mod-li-icon" href="/View_Mobile/UI/BASE/APP_MOBIL_WF.html?FormCode=XXFB" external><img src="../images/plus-add.png"></a>
+                </li>
+            </ul>
+        </div>
+
     </div>
     <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
     <script>$.config = { autoInit: true }</script>
