修复图片上传Bug

--- a/QJY.WEB/ViewV5/index.html
+++ b/QJY.WEB/ViewV5/index.html
@@ -442,7 +442,7 @@
         });
         // 切换
         $(function () {
-            window.UMEDITOR_HOME_URL = "/ViewV5/JS/umeditor122/"
+            window.UMEDITOR_HOME_URL = "/ToolS/umeditor122/"
             $("#dvskin").bind("click", function (event) {
                 event.stopPropagation();
             })
